[tool.poetry]
name = "crispy-waffle"
version = "0.1.0"
description = "Basic use of spatula for web scraping"
authors = ["Esperanza Dueñas <esperanzaduenas007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spatula = "0.9.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
